--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </a>
         <ul>
           <li>
-            <a href="" class="navlink"><span class="std-sp">Studio</span></a>
+            <a href="./index.html" class="navlink"
+              ><span class="std-sp">Studio</span></a
+            >
           </li>
           <li><a href="" class="navlink">Portfolio</a></li>
           <li><a href="" class="navlink">Contacts</a></li>
@@ -136,7 +138,7 @@
         <ul>
           <li>
             <img
-              src="./images/Image 2.6.jpg"
+              src="./images/image26.jpg"
               alt="App Design"
               class="portf-img"
               width="360"
@@ -146,7 +148,7 @@
           </li>
           <li>
             <img
-              src="./images/Image 2.5.jpg"
+              src="./images/image25.jpg"
               alt="QR Code Payment"
               class="portf-img"
               width="360"
@@ -156,7 +158,7 @@
           </li>
           <li>
             <img
-              src="./images/Image 2.4.jpg"
+              src="./images/image24.jpg"
               alt="Design for laptop and phone"
               class="portf-img"
               width="360"
@@ -166,7 +168,7 @@
           </li>
           <li>
             <img
-              src="./images/Image 2.3.jpg"
+              src="./images/image23.jpg"
               alt="Taxi with navigation"
               class="portf-img"
               width="360"
@@ -176,7 +178,7 @@
           </li>
           <li>
             <img
-              src="./images/Image 2.2.jpg"
+              src="./images/image22.jpg"
               alt="Futuristic Backgrounds"
               class="portf-img"
               width="360"
@@ -186,7 +188,7 @@
           </li>
           <li>
             <img
-              src="./images/Image 2.1.jpg"
+              src="./images/image21.jpg"
               alt="A woman holding a phone"
               class="portf-img"
               width="360"
