--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-web">
+      <a href="./index.html" class="footer-logo">
         Web
         <span class="footer-std">Studio</span>
       </a>
