--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
   </head>
   <body>
     <header>
-      <nav class="nav">
+      <nav>
         <a href="./index.html" class="logo-web">
           Web
           <span class="logo-std">Studio</span>
         </a>
         <ul>
           <li>
-            <a href="./index.html" class="navlink"
-              ><span class="std-sp">Studio</span></a
-            >
+            <a href="./index.html" class="navlink">Studio</a>
           </li>
           <li><a href="" class="navlink">Portfolio</a></li>
           <li><a href="" class="navlink">Contacts</a></li>
